// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderers:Action [actionType = "link"] show active class 1`] = `
<button
  className="cxd-Button cxd-Button--default a"
  onClick={[Function]}
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action [actionType = "link"] show active class 2`] = `
<button
  className="cxd-Button cxd-Button--default a is-active"
  onClick={[Function]}
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action MenuItem changes class when actived & disabled 1`] = `
<a
  className="a"
  onClick={[Function]}
>
  <span>
    123
  </span>
</a>
`;

exports[`Renderers:Action MenuItem changes class when actived & disabled 2`] = `
<a
  className="a is-active"
  onClick={[Function]}
>
  <span>
    233
  </span>
</a>
`;

exports[`Renderers:Action MenuItem changes class when actived & disabled 3`] = `
<a
  className="a is-active"
  disabled={true}
  onClick={[Function]}
>
  <span>
    233
  </span>
</a>
`;

exports[`Renderers:Action MenuItem display icon 1`] = `
<a
  className="a"
  onClick={[Function]}
>
  <span>
    123
  </span>
</a>
`;

exports[`Renderers:Action MenuItem display icon 2`] = `
<a
  className="a"
  onClick={[Function]}
>
  <i
    className="cxd-Button-icon fa fa-cloud"
  />
  <span>
    123
  </span>
</a>
`;

exports[`Renderers:Action custom activeClass 1`] = `
<button
  className="cxd-Button cxd-Button--default a"
  onClick={[Function]}
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action custom activeClass 2`] = `
<button
  className="cxd-Button cxd-Button--default a custom-active"
  onClick={[Function]}
  type="button"
>
  <span>
    123
  </span>
</button>
`;
